feat: add credential import and export
